improvment of showcase section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           </li>
           <li>
             <a class="links__nav-link" href="#">
-              Projects
+              About Me
             </a>
           </li>
           <li>
             <a class="links__nav-link" href="#">
-              About Me
+              Projects
             </a>
           </li>
           <li>
@@ -46,11 +46,24 @@
               Contact
             </a>
           </li>
+          <li>
+            <a class="links__nav-link" href="#">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li>
+            <a class="links__nav-link" href="mailto:szymqwerty@gmail.com">
+              <i class="far fa-envelope"></i>
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="home" class="home">
+        <div class="shape-layer--1"></div>
+        <div class="shape-layer--2"></div>
+        <div class="shape-layer--3"></div>
         <div class="content">
           <div class="section__col home__col--left">
             <h1 class="home__title">
@@ -104,7 +117,7 @@
         </div>
       </section>
       <section id="projectsHeader" class="projects-header">
-        <h3 class="sample-projects__header">My projects samples</h3>
+        <h3 class="sample-projects__header">My projects samples <span  class="fas fa-cogs icon-send"/></h3>
       </section>
       <section id="projectsList" class="projects-list project-1">
         <div class="content">
@@ -305,7 +318,7 @@
     </section>
   <!-- PROJECT 3 END -->
   <section id="projectsHeader" class="projects-header">
-    <h3 class="sample-projects__header">Contact with me!</h3>
+    <h3 class="sample-projects__header">Contact with me! <span class="far fa-paper-plane fa-lg icon-send"/></h3>
   </section>
   <section id="contact" class="contact">
     <div class="content">
