added hover effect to links

--- a/index.html
+++ b/index.html
@@ -179,9 +179,15 @@
               <div class="projects-list__links-group">
                 <a class="projects-list__project-link" href="#">
                   Code
+                  <span class="projects-list__project-link--layer">
+                    <span class="fab fa-github fa-lg icon-send" />
+                  </span>
                 </a>
                 <a class="projects-list__project-link" href="#">
                   Live
+                  <span class="projects-list__project-link--layer">
+                    <span class="fas fa-eye icon-send" />
+                  </span>
                 </a>
               </div>
             </div>
@@ -243,9 +249,15 @@
           <div class="projects-list__links-group">
             <a class="projects-list__project-link" href="#">
               Code
+              <span class="projects-list__project-link--layer">
+                <span class="fab fa-github fa-lg icon-send" />
+              </span>
             </a>
             <a class="projects-list__project-link" href="#">
               Live
+              <span class="projects-list__project-link--layer">
+                <span class="fas fa-eye icon-send" />
+              </span>
             </a>
           </div>
         </div>
@@ -307,9 +319,15 @@
             <div class="projects-list__links-group">
               <a class="projects-list__project-link" href="#">
                 Code
+                <span class="projects-list__project-link--layer">
+                  <span class="fab fa-github fa-lg icon-send"/>
+                </span>
               </a>
               <a class="projects-list__project-link" href="#">
                 Live
+                <span class="projects-list__project-link--layer">
+                  <span class="fas fa-eye icon-send" />
+                </span>
               </a>
             </div>
           </div>
