--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <div class="projects-list__tech-and-links--wrapper">
               <table class="projects-list__tech-list">
                 <!-- <li>
-                  <i class="devicon-javascript-plain colored"></i> JavaScript
-                </li> -->
+                        <i class="devicon-javascript-plain colored"></i> JavaScript
+                      </li> -->
                 <tbody>
                   <tr>
                     <td>React</td>
@@ -193,147 +193,148 @@
             </div>
           </div>
         </div>
-</section>
-<!-- PROJECT 2 START -->
-  <section id="projectsList" class="projects-list project-2">
-    <div class="content">
-      <div class="section__col">
-        <div class="project-mockup"></div>
-      </div>
-      <div class="section__col section__col--details">
-        <h2 class="projects-list__project-name">Mental math gym</h2>
-        <p class="projects-list__project-description">
-          Web application for training your mind, thinging speed and math skills. 
-          By exercising trough app you will see first effects very quickly!
-        </p>
-        <p class="projects-list__project-description">
-          App gives you possiblities to practise mental math, it has option to configure level of difficulty. 
-          You can easyli creat account and track your progress and get achievments! My students are very happy of this app!
-        </p>
-        <h4 class="projects-list__project-tech">
-          Used technology and tools
-        </h4>
-        <div class="projects-list__tech-and-links--wrapper">
-          <table class="projects-list__tech-list">
-            <tbody>
-              <tr>
-                <td>React</td>
-                <td class="td-icon">
-                  <span class="fab fa-react icon-react fa-lg" />
-                </td>
-              </tr>
-              <tr>
-                <td>Redux</td>
-                <td class="td-icon">
-                  <img src="./images/redux.png" height="25" width="25" />
-                </td>
-              </tr>
-              <tr>
-                <td>MaterialUI</td>
-                <td class="td-icon"><img src="./images/material-ui.png" height="25" width="25" /></td>
-              </tr>
-              <tr>
-                <td>Firebase</td>
-                <td class="td-icon"><img src="./images/firebase.png" height="25" width="25" /></td>
-              </tr>
-              <tr>
-                <td>NPM</td>
-                <td class="td-icon"><span class="fab fa-npm icon-npm fa-lg" /></td>
-              </tr>
-              <tr>
-                <td>Git</td>
-                <td class="td-icon"><span class="fab fa-git-square icon-git fa-lg" /></td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="projects-list__links-group">
-            <a class="projects-list__project-link" href="#">
-              Code
-              <span class="projects-list__project-link--layer">
-                <span class="fab fa-github fa-lg icon-send" />
-              </span>
-            </a>
-            <a class="projects-list__project-link" href="#">
-              Live
-              <span class="projects-list__project-link--layer">
-                <span class="fas fa-eye icon-send" />
-              </span>
-            </a>
+      </section>
+      <!-- PROJECT 2 START -->
+      <section id="projectsList" class="projects-list project-2">
+        <div class="content">
+          <div class="section__col">
+            <div class="project-mockup"></div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- PROJECT 2 END -->
-  <!-- PROJECT 3 START -->
-    <section class="projects-list project-3">
-      <div class="content">
-        <div class="section__col">
-          <div class="project-mockup"></div>
-        </div>
-        <div class="section__col section__col--details">
-          <h2 class="projects-list__project-name">Google keep clone</h2>
-          <p class="projects-list__project-description">
-            App is copy of well known application from google. It is used for crating notes, lists etc.
-            Properly and consistently using of this app definitly increase daily productivity.  
-          </p>
-          <p class="projects-list__project-description">
-            
-          </p>
-          <h4 class="projects-list__project-tech">
-            Used technology and tools
-          </h4>
-          <div class="projects-list__tech-and-links--wrapper">
-            <table class="projects-list__tech-list">
-              <tbody>
-                <tr>
-                  <td>React</td>
-                  <td class="td-icon">
-                    <span class="fab fa-react icon-react fa-lg" />
-                  </td>
-                </tr>
-                <tr>
-                  <td>Redux</td>
-                  <td class="td-icon">
-                    <img src="./images/redux.png" height="25" width="25" />
-                  </td>
-                </tr>
-                <tr>
-                  <td>MaterialUI</td>
-                  <td class="td-icon"><img src="./images/material-ui.png" height="25" width="25" /></td>
-                </tr>
-                <tr>
-                  <td>Firebase</td>
-                  <td class="td-icon"><img src="./images/firebase.png" height="25" width="25" /></td>
-                </tr>
-                <tr>
-                  <td>NPM</td>
-                  <td class="td-icon"><span class="fab fa-npm icon-npm fa-lg" /></td>
-                </tr>
-                <tr>
-                  <td>Git</td>
-                  <td class="td-icon"><span class="fab fa-git-square icon-git fa-lg" /></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="projects-list__links-group">
-              <a class="projects-list__project-link" href="#">
-                Code
-                <span class="projects-list__project-link--layer">
-                  <span class="fab fa-github fa-lg icon-send"/>
-                </span>
-              </a>
-              <a class="projects-list__project-link" href="#">
-                Live
-                <span class="projects-list__project-link--layer">
-                  <span class="fas fa-eye icon-send" />
-                </span>
-              </a>
+          <div class="section__col section__col--details">
+            <h2 class="projects-list__project-name">Mental math gym</h2>
+            <p class="projects-list__project-description">
+              Web application for training your mind, thinging speed and math skills.
+              By exercising trough app you will see first effects very quickly!
+            </p>
+            <p class="projects-list__project-description">
+              App gives you possiblities to practise mental math, it has option to configure level of difficulty.
+              You can easyli creat account and track your progress and get achievments! My students are very happy of this
+              app!
+            </p>
+            <h4 class="projects-list__project-tech">
+              Used technology and tools
+            </h4>
+            <div class="projects-list__tech-and-links--wrapper">
+              <table class="projects-list__tech-list">
+                <tbody>
+                  <tr>
+                    <td>React</td>
+                    <td class="td-icon">
+                      <span class="fab fa-react icon-react fa-lg" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Redux</td>
+                    <td class="td-icon">
+                      <img src="./images/redux.png" height="25" width="25" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>MaterialUI</td>
+                    <td class="td-icon"><img src="./images/material-ui.png" height="25" width="25" /></td>
+                  </tr>
+                  <tr>
+                    <td>Firebase</td>
+                    <td class="td-icon"><img src="./images/firebase.png" height="25" width="25" /></td>
+                  </tr>
+                  <tr>
+                    <td>NPM</td>
+                    <td class="td-icon"><span class="fab fa-npm icon-npm fa-lg" /></td>
+                  </tr>
+                  <tr>
+                    <td>Git</td>
+                    <td class="td-icon"><span class="fab fa-git-square icon-git fa-lg" /></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="projects-list__links-group">
+                <a class="projects-list__project-link" href="#">
+                  Code
+                  <span class="projects-list__project-link--layer">
+                    <span class="fab fa-github fa-lg icon-send" />
+                  </span>
+                </a>
+                <a class="projects-list__project-link" href="#">
+                  Live
+                  <span class="projects-list__project-link--layer">
+                    <span class="fas fa-eye icon-send" />
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <!-- PROJECT 2 END -->
+      <!-- PROJECT 3 START -->
+      <section class="projects-list project-3">
+        <div class="content">
+          <div class="section__col">
+            <div class="project-mockup"></div>
+          </div>
+          <div class="section__col section__col--details">
+            <h2 class="projects-list__project-name">Google keep clone</h2>
+            <p class="projects-list__project-description">
+              App is copy of well known application from google. It is used for crating notes, lists etc.
+              Properly and consistently using of this app definitly increase daily productivity.
+            </p>
+            <p class="projects-list__project-description">
+      
+            </p>
+            <h4 class="projects-list__project-tech">
+              Used technology and tools
+            </h4>
+            <div class="projects-list__tech-and-links--wrapper">
+              <table class="projects-list__tech-list">
+                <tbody>
+                  <tr>
+                    <td>React</td>
+                    <td class="td-icon">
+                      <span class="fab fa-react icon-react fa-lg" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Redux</td>
+                    <td class="td-icon">
+                      <img src="./images/redux.png" height="25" width="25" />
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>MaterialUI</td>
+                    <td class="td-icon"><img src="./images/material-ui.png" height="25" width="25" /></td>
+                  </tr>
+                  <tr>
+                    <td>Firebase</td>
+                    <td class="td-icon"><img src="./images/firebase.png" height="25" width="25" /></td>
+                  </tr>
+                  <tr>
+                    <td>NPM</td>
+                    <td class="td-icon"><span class="fab fa-npm icon-npm fa-lg" /></td>
+                  </tr>
+                  <tr>
+                    <td>Git</td>
+                    <td class="td-icon"><span class="fab fa-git-square icon-git fa-lg" /></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="projects-list__links-group">
+                <a class="projects-list__project-link" href="#">
+                  Code
+                  <span class="projects-list__project-link--layer">
+                    <span class="fab fa-github fa-lg icon-send" />
+                  </span>
+                </a>
+                <a class="projects-list__project-link" href="#">
+                  Live
+                  <span class="projects-list__project-link--layer">
+                    <span class="fas fa-eye icon-send" />
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
   <!-- PROJECT 3 END -->
   <section id="projectsHeader" class="projects-header">
     <h3 class="sample-projects__header">Contact with me! <span class="far fa-paper-plane fa-lg icon-send"/></h3>
